# kickir

./: Cargo.toml  diagram.json  sdkconfig.defaults  wokwi.toml
.devcontainer/: devcontainer.json
docs/: README.md
scripts/: flash.sh
src/: goal_detector.rs  main.rs  sensor.rs  server.rs
