[package]
name = "kickir"
version = "0.1.0"
authors = ["Thomas Schmitt <t.e.schmitt@posteo.de>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "kickir"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []
experimental = ["esp-idf-svc/experimental"]

[dependencies]
anyhow = { version = "1.0.95" }
embedded-svc = "0.28.1"
esp-idf-hal ={ version = "0.45.2"}
esp-idf-svc = { version = "0.51", default-features = false, features = ["alloc", "critical-section", "embassy-time-driver", "embassy-sync"] }
esp-idf-sys = { version = "0.36", default-features = false }
esp32-nimble = { version = "0.10.0", default-features = false}
log = { version = "0.4" }
once_cell = { version = "1.20.2" }

[build-dependencies]
embuild = "0.33"
